--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,6 +5,7 @@ on:
   workflow_dispatch:
 env:
   IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/ansible
+  IMAGE_NAME_HUB: ${{ github.repository_owner }}/ansible
 jobs:
   docker-push:
     name: Docker image build and push
@@ -12,16 +13,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Set TAGS
-        id: set_tags
-        run: |
-          pip install ansible
-          DOCKER_VERSION_FULL=$(ansible --version | grep ansible | grep -o '[0-9]\+\.[0-9]\+\.[0-9]\+' | head -1)
-          DOCKER_VERSION_MINOR=$(echo $DOCKER_VERSION_FULL | grep -o '[0-9]\+\.[0-9]\+' | head -1)
-          DOCKER_VERSION_MAJOR=$(echo $DOCKER_VERSION_MINOR | grep -o '[0-9]\+' | head -1)
-          TAGS="${IMAGE_NAME}:latest,${IMAGE_NAME}:${DOCKER_VERSION_FULL},${IMAGE_NAME}:${DOCKER_VERSION_MINOR},${IMAGE_NAME}:${DOCKER_VERSION_MAJOR}"
-          echo "TAGS: '${TAGS}'"
-          echo "TAGS=${TAGS}" >> "$GITHUB_OUTPUT"
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
@@ -32,6 +23,22 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CONTAINER_REGISTRY_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Set TAGS
+        id: set_tags
+        run: |
+          pip install ansible
+          DOCKER_VERSION_FULL=$(ansible --version | grep ansible | grep -o '[0-9]\+\.[0-9]\+\.[0-9]\+' | head -1)
+          DOCKER_VERSION_MINOR=$(echo $DOCKER_VERSION_FULL | grep -o '[0-9]\+\.[0-9]\+' | head -1)
+          DOCKER_VERSION_MAJOR=$(echo $DOCKER_VERSION_MINOR | grep -o '[0-9]\+' | head -1)
+          TAGS="${IMAGE_NAME}:latest,${IMAGE_NAME}:${DOCKER_VERSION_FULL},${IMAGE_NAME}:${DOCKER_VERSION_MINOR},${IMAGE_NAME}:${DOCKER_VERSION_MAJOR}"
+          TAGS="${TAGS},${IMAGE_NAME_HUB}:latest,${IMAGE_NAME_HUB}:${DOCKER_VERSION_FULL},${IMAGE_NAME_HUB}:${DOCKER_VERSION_MINOR},${IMAGE_NAME_HUB}:${DOCKER_VERSION_MAJOR}"
+          echo "TAGS: '${TAGS}'"
+          echo "TAGS=${TAGS}" >> "$GITHUB_OUTPUT"
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
