--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,6 +3,9 @@ on:
   schedule:
     - cron: "0 4 * * 2,6"
   workflow_dispatch:
+env:
+  IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/ansible
+  IMAGE_NAME_HUB: ${{ github.repository_owner }}/ansible
 jobs:
   docker-push:
     name: Docker image build and push
@@ -10,11 +13,36 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
       - name: Login to GitHub Packages Docker Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CONTAINER_REGISTRY_TOKEN }}
-      - name: Build docker image and push it, if new tag available
-        run: bash ./push.sh
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Set TAGS
+        id: set_tags
+        run: |
+          pip install ansible
+          DOCKER_VERSION_FULL=$(ansible --version | grep ansible | grep -o '[0-9]\+\.[0-9]\+\.[0-9]\+' | head -1)
+          DOCKER_VERSION_MINOR=$(echo $DOCKER_VERSION_FULL | grep -o '[0-9]\+\.[0-9]\+' | head -1)
+          DOCKER_VERSION_MAJOR=$(echo $DOCKER_VERSION_MINOR | grep -o '[0-9]\+' | head -1)
+          TAGS="${IMAGE_NAME}:latest,${IMAGE_NAME}:${DOCKER_VERSION_FULL},${IMAGE_NAME}:${DOCKER_VERSION_MINOR},${IMAGE_NAME}:${DOCKER_VERSION_MAJOR}"
+          TAGS="${TAGS},${IMAGE_NAME_HUB}:latest,${IMAGE_NAME_HUB}:${DOCKER_VERSION_FULL},${IMAGE_NAME_HUB}:${DOCKER_VERSION_MINOR},${IMAGE_NAME_HUB}:${DOCKER_VERSION_MAJOR}"
+          echo "TAGS: '${TAGS}'"
+          echo "TAGS=${TAGS}" >> "$GITHUB_OUTPUT"
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ steps.set_tags.outputs.tags }}
